# gmock_without_inheritance

./: CMakeLists.txt  README.md
src/: Controller.cpp  Controller.h  main.cpp  main.test.cpp
turtle/: Turtle.cpp  Turtle.h
turtle/mock/: Turtle.h
turtle/src/: Turtle.cpp  Turtle.h  Turtle.test.cpp
turtle_mocks/: Turtle.h
